# cte_py

./: .editorconfig  .gitignore  README.md  pyproject.toml
examples/: extract_target_content_from_email.py
src/cte/: __init__.py  core.py  exceptions.py
