[tool.poetry]
name = "cte_py"
version = "0.1.0"
description = "A python tool for cf temp email"
license = "MIT"
authors = ["delph1s <c@linux.do>"]
maintainers = ["delph1s <c@linux.do>"]
readme = "README.md"
homepage = "https://github.com/delph1s/cte_py"
repository = "https://github.com/delph1s/cte_py"
documentation = "https://github.com/delph1s/cte_py"
keywords = [
    "cloudflare",
    "temp",
    "email",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [
    { include = "cte", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^3.8.0"
pylint = "^3.3.1"
tox = "^4.23.2"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-glightbox = "^0.3.7"
mkdocs-material = "^9.5.44"
mkdocs-minify-plugin = "^0.7.2"
mkdocs-redirects = "^1.2.2"
mkdocs-table-reader-plugin = "^2.2.2"

#[tool.poetry.scripts]
#cte = "cte.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
markers = [
    "unfinished: marks tests as slow (deselect with '-m \"not slow\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 120
target-versions = ["py310", "py311", "py312", "py313"]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = ["tests", "src"]
#exclude = []
#extend-exclude = []
#force-exclude = []
workers = 20
quiet = false
verbose = false
